--- a/Homepage.html
+++ b/Homepage.html
@@ -20,8 +20,10 @@
     <h1>Cocktail Lovers</h1>
 
         <h2 >Why are cocktails so delicious?</h2>
+        <p>Who doesn't love cocktails?</p>
        
          <p>This page is dedicated to my favorate cocktails and how to make them. Cocktails come in many forms, from the fruity ones that remind you of a exotic holiday to the smooth and sophisticated. So grab a cocktail shaker and enjoy! </p>
+        
 
          <marquee>Party ON!!</marquee>
 
